# HandWrite-CPP

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
HandWrite-CPP/: CMakeLists.txt
HandWrite-CPP/src/: core.cpp  core.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  tools.hpp
HandWrite-CPP/ui/: mainwindow.ui
src/: config.cpp  config.hpp  core.hpp  main.cpp  mainwindow.cpp  tools.cpp
